src/test/resources/extension/valid/generics/simpleGenericPair.awsl
begin

pair(int, char) p = newpair(1, 'a');

int x = fst p;
println x;

end